fix alignment of check boxes in build tools prefs

--- a/src/gwt/src/org/rstudio/studio/client/projects/ui/prefs/ProjectPreferencesDialog.css
+++ b/src/gwt/src/org/rstudio/studio/client/projects/ui/prefs/ProjectPreferencesDialog.css
@@ -71,6 +71,10 @@
    width: 100%;
 }
 
+.buildToolsCheckBox {
+   margin-left: -5px;
+}
+
 .buildToolsRoxygenize {
    margin-top: 20px;
    width: 100%;
